2015-01-06  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2064: Unset OS before running OpenJDK build
	* Makefile.am:
	(ICEDTEA_UNSET): Introduce variable to
	store unsetting of environment variables.
	(ICEDTEA_ENV): Move JAVAC, JAVA_HOME and
	JDK_HOME to ICEDTEA_UNSET.
	(icedtea): Unset variables prior to running
	$(MAKE).
	(icedtea-debug): Likewise.
	(icedtea-boot): Likewise.
	* NEWS: Updated.

2015-01-06  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS:
	Fix RH bug reference in 2.5.3 release notes.

2014-12-30  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am,
	(CORBA_CHANGESET): Update to icedtea-2.6pre16.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* NEWS: Updated.
	* configure.ac: Bump to 2.6.0pre16.
	* hotspot.map.in: Update to icedtea-2.6pre16.

2014-12-12  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(EXTRA_DIST): Drop reference to HotSpot patches
	as there is no longer an alternate HotSpot.
	* NEWS: Updated.

2014-12-11  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am,
	(CORBA_CHANGESET): Update to icedtea-2.6pre15.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* NEWS: Updated.
	* configure.ac: Bump to 2.6.0pre15.
	* hotspot.map.in: Update to icedtea-2.6pre15.

2014-12-09  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am,
	(CORBA_CHANGESET): Update to icedtea-2.6pre14.
	(JAXP_CHANGESET): Likewise.